# household-spending

./: # .pre-commit-config.yaml.txt  .gitignore  .pre-commit-config.yaml  GIT_WORKFLOW.md  README.md  pyproject.toml  requirements.txt
notebooks/: 01_dev_playground.ipynb.bak  01_dev_playground.py
process/: TB-S02-A.md  TB-S04-A.md  TB-S05-A.md  TB-S08-A.md  chatgpt_branching_prompt_snippets.md  loop_runbook_anchors.html  master_runbook_FULL_with_RC-L.md  troubleshooting_branch_template.md
src/household_spending/: __init__.py  boa_analysis.py  boa_transform.py
tests/: test_transform.py
